# Pystartowo

./: .gitignore  LICENSE  README.md  _rebuild_web_contairner.sh  default.env  docker-compose.yml  dockerfile  manage.py  pyproject.toml  requirements.txt
docker/: docker-compose.yml  dockerfile
main/: models.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: index.html
nginx/conf.d/: default.conf
posts/: models.py
posts/migrations/: 0001_initial.py
pystartowo/: CONTRIBUTORS.txt  README.md  asgi.py  docker-compose.yml  dockerfile  requirements.txt  settings.py  setup.cfg  urls.py  wsgi.py
pystartowo/core/: .env.dist  managers.py  models.py  settings.py  urls.py  utils.py
pystartowo/knowledge/: admin.py
pystartowo/posts/: admin.py  forms.py  models.py  urls.py  views.py
pystartowo/posts/migrations/: 0001_initial.py
pystartowo/pystartowo/: asgi.py  settings.py  urls.py
pystartowo/pystartowo/core/: asgi.py  settings.py  urls.py  wsgi.py
pystartowo/pystartowo/posts/: admin.py  forms.py  models.py  urls.py  views.py
pystartowo/pystartowo/posts/migrations/: 0001_initial.py  0002_alter_post_image_file.py  0003_alter_post_author_alter_post_editor.py
pystartowo/pystartowo/static/css/: app.css
pystartowo/pystartowo/static/js/: app.js
pystartowo/pystartowo/tags/: admin.py  models.py  views.py
pystartowo/pystartowo/tags/migrations/: 0001_initial.py  0002_alter_tag_slug.py
pystartowo/pystartowo/templates/: base.html  homepage.html  template_of_templates.html
pystartowo/pystartowo/templates/posts/: post_detail.html  post_form.html  post_list.html
pystartowo/pystartowo/users/: urls.py  views.py
pystartowo/static/css/: app.css
pystartowo/staticfiles/css/: app.css
pystartowo/tags/: admin.py  urls.py  views.py
pystartowo/tags/migrations/: 0001_initial.py
pystartowo/templates/: base.html  homepage.html
pystartowo/templates/posts/: post_detail.html  post_form.html  post_list.html  post_main.html
pystartowo/templates/registration/: login.html  register.html
pystartowo/templates/users/: user_detail.html  user_form.html
pystartowo/templates/widgets/: base_footer.html  base_navbar.html
pystartowo/users/: admin.py  forms.py  models.py  urls.py  views.py
pystartowo/users/migrations/: 0001_initial.py
tags/: admin.py  models.py  urls.py  views.py
tags/migrations/: 0001_initial.py
(+14 files in other folders)
