[tool.poetry]
name = "pystartowo"
version = "0.1.0"
description = "Python knowledge base for beginners"
authors = ["Rafał Kowalski <rafkow91@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.3"
autopep8 = "^1.7.0"
Django = "^4.1.1"
python-dotenv = "^0.21.0"
cookiecutter = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
