[tool.poetry]
name = "pystartowo"
version = "0.1.0"
description = "Python knowledge base for beginners"
authors = ["Rafał Kowalski <rafkow91@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "2.9.3"
autopep8 = "1.7.0"
Django = "4.1.1"
python-dotenv = "0.21.0"
cookiecutter = "2.1.1"
django-tinymce = "3.5.0"
Pillow = "9.2.0"
django-autocomplete-light = "3.9.4"
arrow = "1.2.3"
asgiref = "3.5.2"
attrs = "22.1.0"
binaryornot = "0.4.4"
black = "22.8.0"
certifi = "2022.9.24"
chardet = "5.0.0"
charset-normalizer = "2.1.1"
click = "8.1.3"
django-crispy-forms = "1.14.0"
django-environ = "0.9.0"
django-extensions = "3.2.1"
flake8 = "5.0.4"
idna = "3.4"
iniconfig = "1.1.1"
Jinja2 = "3.1.2"
jinja2-time = "0.2.0"
MarkupSafe = "2.1.1"
mccabe = "0.7.0"
mypy-extensions = "0.4.3"
packaging = "21.3"
pathspec = "0.10.1"
platformdirs = "2.5.2"
pluggy = "1.0.0"
py = "1.11.0"
pycodestyle = "2.9.1"
pyflakes = "2.5.0"
pyparsing = "3.0.9"
pytest = "7.1.3"
pytest-django = "4.5.2"
python-dateutil = "2.8.2"
python-slugify = "6.1.2"
PyYAML = "6.0"
requests = "2.28.1"
six = "1.16.0"
sorl-thumbnail = "12.9.0"
sqlparse = "0.4.3"
text-unidecode = "1.3"
toml = "0.10.2"
tomli = "2.0.1"
urllib3 = "1.26.12"
crispy-bootstrap5 = "^0.7"


[tool.poetry.group.dev.dependencies]
pylint-django = "^2.5.3"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
